--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,6 @@
 // Bootstrap-icon
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
 
+//Select2
+@import "~select2/dist/css/select2.css";
+
